--- a/exercicio1.html
+++ b/exercicio1.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="caminho/para/numero-por-extenso.js"></script>
-    <script src="script1.js"></script>
+  <title>Exercicio 1 - Camila</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <script src="script1.js"></script>
+  <!--  <script src="node_modules\numero-por-extenso\index.js"></script>  !-->
 </head>
 <body>
-    
+    <div class="modal modal-sheet d-block bg-body-secondary p-4 py-md-5" tabindex="-1" role="dialog" id="modalSignin">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content rounded-4 shadow">
+                <div class="modal-header p-5 pb-4 border-bottom-0">
+                    <h1 class="fw-bold mb-0 fs-2">Ex 1</h1>
+                </div>
+                <div class="modal-body p-5 pt-0">
+                    <form>
+                        <div class="form-floating mb-3">
+                            <input type="number" class="form-control rounded-3" id="numRecebido">
+                            <label for="numRecebido">Digite um número de 0 a 9999:</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <textarea class="form-control rounded-3" name="" id="resultadoExtenso" cols="3" rows="10"></textarea>
+                            <input type="number" class="form-control rounded-3" id="numRecebido">
+                            <label for="resultado"></label>
+                        </div>
+                        
+
+                        <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="button"
+                            onclick="converter()">Converter</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
