--- a/exercicio1.html
+++ b/exercicio1.html
@@ -4,7 +4,6 @@
   <title>Exercicio 1 - Camila</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <script src="script1.js"></script>
-  <!--  <script src="node_modules\numero-por-extenso\index.js"></script>  !-->
 </head>
 <body>
     <div class="modal modal-sheet d-block bg-body-secondary p-4 py-md-5" tabindex="-1" role="dialog" id="modalSignin">
@@ -16,16 +15,14 @@
                 <div class="modal-body p-5 pt-0">
                     <form>
                         <div class="form-floating mb-3">
-                            <input type="number" class="form-control rounded-3" id="numRecebido">
-                            <label for="numRecebido">Digite um número de 0 a 9999:</label>
+                            <input type="number" class="form-control rounded-3" id="numero">
+                            <label for="numero">Digite um número de 0 a 9999:</label>
                         </div>
                         <div class="form-floating mb-3">
                             <textarea class="form-control rounded-3" name="" id="resultadoExtenso" cols="3" rows="10"></textarea>
                             <input type="number" class="form-control rounded-3" id="numRecebido">
                             <label for="resultado"></label>
                         </div>
-                        
-
                         <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="button"
                             onclick="converter()">Converter</button>
                     </form>
