--- a/exercicio1.html
+++ b/exercicio1.html
@@ -10,7 +10,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content rounded-4 shadow">
                 <div class="modal-header p-5 pb-4 border-bottom-0">
-                    <h1 class="fw-bold mb-0 fs-2">Ex 1</h1>
+                    <h1 class="fw-bold mb-0 fs-2">Ex 1 - Nº por extenso</h1>
                 </div>
                 <div class="modal-body p-5 pt-0">
                     <form>
@@ -18,17 +18,14 @@
                             <input type="number" class="form-control rounded-3" id="numero">
                             <label for="numero">Digite um número de 0 a 9999:</label>
                         </div>
-                        <div class="form-floating mb-3">
-                            <textarea class="form-control rounded-3" name="" id="resultadoExtenso" cols="3" rows="10"></textarea>
-                            <input type="number" class="form-control rounded-3" id="numRecebido">
-                            <label for="resultado"></label>
-                        </div>
                         <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="button"
-                            onclick="converter()">Converter</button>
+                            onclick="converterNumero()">Converter</button>
                     </form>
+                    <div id="resultado"></div>
                 </div>
             </div>
         </div>
     </div>
 </body>
 </html>
+
