--- a/exercicio3.html
+++ b/exercicio3.html
@@ -1,11 +1,46 @@
-<!--
-3. Observe atentamente o algoritmo a seguir:
-Letra B, loop infinito
+<!DOCTYPE html>
+<html>
 
+<head>
+  <title>Exercicio 3 - Camila</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+</head>
 
-while (num <=10){
-    console.log(num)
-    num += 0; //o problema esta nessa linha, não esta sendo incrementado, automaticamente fica preso em loop
-}
+<body>
+  <div class="modal modal-sheet d-block bg-body-secondary p-4 py-md-5" tabindex="-1" role="dialog" id="modalSignin">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content rounded-4 shadow">
+        <div class="modal-header p-5 pb-4 border-bottom-0">
+          <h1 class="fw-bold mb-0 fs-2">Ex 3 - Erro</h1>
+        </div>
+        <div class="modal-body p-5 pt-0">
+          <form>
+            <div class="form-floating mb-3">
+              <h3>Observe atentamente o algoritmo a seguir:</h3>
+            </div>
+            <div class="form-floating mb-3">
+              <div class="row">
+                <div class="col-12">
+                  <p> var num = -1; <br>
 
---> 
+                    while (num <=10){ <br>
+                        console.log(num) <br>
+                        num += 0; <strong>//o problema esta nessa linha, não esta sendo incrementado, automaticamente fica preso em loop</strong> <br>
+                    }<br>
+                    <br>
+                    if (num > 10){<br>
+                        console.log(num)<br>
+                    }<br>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+
+</html>
